-- Fixed scroll height related issue with collapse menu bar

--- a/src/assets/scss/structure/_vertical.scss
+++ b/src/assets/scss/structure/_vertical.scss
@@ -25,7 +25,7 @@
 }
 
 .data-section {
-    height: calc(100vh - 170px);
+    // height: calc(100vh - 170px);
     overflow: hidden;
 
     @media (min-width: 1400px) {
